# himekuri_rust

./: .gitignore  Cargo.toml  Gemfile  README.md  himekuri.rb
src/: main.rs
