[package]
name = "himekuri_public"
version = "1.0.1"
authors = ["Takayuki Kamiyama <karuma.reason@gmail.com>"]
edition = "2018"

[lib]
name = "himekuri_rust"
path = "src/main.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
